y'a que le export qui ne mzrche pas

--- a/screen-designer/angular.json
+++ b/screen-designer/angular.json
@@ -82,8 +82,12 @@
               }
             ],
             "styles": [
-              "src/styles.css"
-            ]
+              "src/styles.css",
+              "node_modules/gridstack/dist/gridstack.min.css"
+            ] ,
+            "scripts": [
+  "node_modules/gridstack/dist/gridstack-all.js"
+]
           }
         }
       }
