--- a/screen-designer/package.json
+++ b/screen-designer/package.json
@@ -17,6 +17,8 @@
     "@angular/forms": "^20.0.0",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "gridstack": "^12.2.1",
+    "interactjs": "^1.10.27",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
